--- a/index.html
+++ b/index.html
@@ -1,62 +1,20 @@
 <html>
  <head>
-  <h1>This is my cheatsheet</h1>
+  <h1>Remgo</h1>
   <link rel='stylesheet' href='../styles.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
    <div>
-     <h2 id='table'>Table example</h2>
-     <table>
-       <thead>table <a title="link inside page" href="#mono">mono</a></thead>
-       <tbody>
-        <tr>
-          <td>d11</td>
-          <td>d12</td>
-        </tr>
-        <tr>
-          <td>d21</td>
-          <td>d22</td>
-        </tr>
-       </tbody>
-     </table>
-     </div>
-     <div class="list">
-     <h2>list</h2>
-     <h3>ordered-list</h3>
-     <ol>
-       <li>this</li>
-       <li>is</li>
-       <li>ordered</li>
-       </ol>
-     </div>
-     <div class="list">
-     <h3>un-ordered-list</h3>
-     <ul>
-       <li>this</li>
-       <li>is</li>
-       <li>un-ordered</li>
-     </ul>
+    <h2>TRPG 하는 고영</h2>
+    <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
+    <p>PL: Magikarogia, Agon, D&D, Gups...</p>
+   </div>
+   <div>
+    <link href="../cheetsheet.html">
     </div>
-    <div>
-     <h2 id='color'>color</h2>
-     <p> we can colored by just <em>'name'</em> or <bold>'16 digit code'</bold>.</p>
-    </div>
-    <div class='font'>
-      <h2 id='font'>font</h2>
-      <p> we can use font from google</p>
-      <button><a title="link of google font site" link href="https://fonts.google.com/"> google font </a></button>
-      <h3> Examples</h3>
-      <p id='serif'>serif</p>
-      <p id='bree' style='color: brown;'>breeserif</p>
-      <p id='mono' href='#mono'> monospace</p>
-    </div>
-    <div>
-      <h2>image</h2>
-      <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
-      </div>
-    </body>
+   </body>
  <footer>
   <h3>contect</h3>
   <p>E-mail: lemgo322@gmail.com</p>
