--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>PL: Magikarogia, Agon, D&D, Gups...</p>
    </div>
    <div>
-    <link href="../cheetsheet.html">
+    <a link href="../cheetsheet.html"> cheet sheet </a>
     </div>
    </body>
  <footer>
