--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <p>PL: Magikarogia, Agon, D&D, Gups...</p>
    </div>
    <div>
-    <a link href="../cheetsheet.html"> cheet sheet </a>
-    </div>
+    <h3>learning html</h3>
+    <ul>
+     <li><a link href="../cheetsheet.html"> cheet sheet </a></li>
+     <li><a link href="../dog.html"> dog </a></li>
+    </ul>
+   </div>
    </body>
  <footer>
   <h3>contect</h3>
