--- a/cheetsheet.html
+++ b/cheetsheet.html
@@ -6,6 +6,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <h1>Navigational Links</h1>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+        </ul>
+      </nav>
+    </header>
    <div>
      <h2 id='table'>Table example</h2>
      <table>
