--- a/dog.html
+++ b/dog.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <h1>적을 알고 나를 알면 백전백승! </h1>
+    <h6>멈머조아!</h6>
   </head>
   <body>
     <header>
-      <h1>Navigational Links</h1>
-      <nav>
+       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
         </ul>
