--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
    <div>
     <h2>TRPG 하는 고영</h2>
+    <img src="remgo.png">
     <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
     <p>PL: Magikarogia, Agon, D&D, Gups...</p>
    </div>
