--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
    <div>
     <h2>TRPG 하는 고영</h2>
-    <img src="../remgo.png">
+    <figure>
+      <img src="../remgo.png">
+     <figcaption>
+      <p>I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.</p>
+      </figcaption>
+     </figure>
     <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
     <p>PL: Magikarogia, Agon, D&D, Gups...</p>
    </div>
