--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <figure>
       <img src="../remgo.png">
      <figcaption>
-      <p>I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.</p>
+      I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       </figcaption>
      </figure>
     <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
