--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>TRPG 하는 고영</h2>
     <figure>
       <img src="../remgo.png">
-     <figcaption>
-      I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
+     <figcaption style="color= red;">
+      <bold>I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.</bold>
       </figcaption>
      </figure>
     <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
