--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <h1>Remgo</h1>
+  <h1 id="remgo">Remgo</h1>
   <link rel='stylesheet' href='../styles.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
