--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <body>
    <div>
     <h2>TRPG 하는 고영</h2>
-    <p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p>
-    <p>PL: Magikarogia, Agon, D&D, Gups...</p>
+    <ul>
+    <li><p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p></li>
+    <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
+     </ul>
     <figure>
       <img src="../remgo.png">
      <figcaption>
@@ -26,7 +28,7 @@
    </div>
    </body>
  <footer>
-  <h3>contect</h3>
+  <h3>contact</h3>
   <p>E-mail: lemgo322@gmail.com</p>
   <p>twitter: rem90tr</p>
  </footer>
