--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       </figcaption>
      </figure>
+    <p>The guys who know this fact, roll the san dice (1d100).</p>
    </div>
    <div>
     <h3>learning html</h3>
