--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   <h3>contact</h3>
   <p>E-mail: lemgo322@gmail.com</p>
   <p>twitter: rem90tr</p>
-  <p>git hub: <link href="https://github.com/remgokim"></p>
+  <p>git hub: <a link href="https://github.com/remgokim">remgokim</a></p>
  </footer>
   </html>
