--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
    <div>
     <h2>TRPG 하는 고영</h2>
-    <ul>
+    <ul id="vary">
     <li><p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p></li>
     <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
      </ul>
