--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
      </ul>
     <figure>
-      <img id="portait" src="../remgo.png">
+      <img src="../remgo.png" height="280" width="180">
      <figcaption>
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       </figcaption>
