--- a/cheetsheet.html
+++ b/cheetsheet.html
@@ -29,7 +29,7 @@
        </tbody>
      </table>
      </div>
-     <div class="list">
+     <div id="list1">
      <h2>list</h2>
      <h3>ordered-list</h3>
      <ol>
@@ -38,7 +38,7 @@
        <li>ordered</li>
        </ol>
      </div>
-     <div class="list">
+     <div id="list2">
      <h3>un-ordered-list</h3>
      <ul>
        <li>this</li>
