--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </figcaption>
      </figure>
     <p id="san">The guys who know this fact, roll the san dice (1d100).</p>
+    <button type='roll' value=' {{roll=[[1d100]]}}' />
    </div>
    <div>
     <h3>learning html</h3>
