--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </figcaption>
      </figure>
     <p id="san">The guys who know this fact, roll the san dice (1d100).</p>
-    <button type='roll' value=' {{roll=[[1d100]]}}' />
+    <button> roll </button>
    </div>
    <div>
     <h3>learning html</h3>
