--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
-   <div>
+   <div id="introduce">
     <h2>TRPG 하는 고영</h2>
     <ul id="vary">
     <li><p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p></li>
     <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
      </ul>
+    </div>
+   <div id="portrait">
     <figure>
       <img src="../remgo.png" height="280" width="180">
      <figcaption>
