--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
+   <div class="main">
    <div id="introduce">
     <h2>TRPG 하는 고영</h2>
     <ul id="vary">
@@ -22,6 +23,7 @@
      </figure>
     <p id="san">The guys who know this fact, roll the san dice (1d100).</p>
     <button> roll </button>
+   </div>
    </div>
    <div>
     <h3>learning html</h3>
