--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
      </ul>
     </div>
-   <div id="portrait">
-    <figure>
+   <div>
+    <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
      <figcaption>
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
