--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </figcaption>
      </figure>
     <p id="san">The guys who know this fact, roll the san dice (1d100).</p>
-    <button> roll </button>
+    <button><a link href="../roll.html" target="_blank"> roll </a> </button>
    </div>
    </div>
    <div>
