--- a/roll.html
+++ b/roll.html
@@ -1,3 +1,9 @@
 <html>
-  <p style="font-size: 100px; color: red;"> 100! </p>
+  <head>
+    <h1> sanity dice </h1>
+  </head>
+  <body>
+    <p style="font-size: 100px; color: red;"> 100! </p>
+  </body>
+  
   </html>
