--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      </ul>
     </div>
    <div>
+    <h2>Who am I?</h2>
     <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
      <figcaption>
