--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><p>PL: Magikarogia, Agon, D&D, Gups...</p></li>
      </ul>
     </div>
-   <div>
+   <div id="who">
     <h2>Who am I?</h2>
     <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
