--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
    <div id="who">
     <h2>Who am I?</h2>
-    <figure id="portrait">
-      <img src="../remgo.png" height="280" width="180">
+    <figure>
+      <img src="../remgo.png" height="280" width="180" id="portrait">
      <figcaption>
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       </figcaption>
