--- a/roll.html
+++ b/roll.html
@@ -5,7 +5,7 @@
   <body>
     <p style="font-size: 100px; color: red;"> 100! </p>
     
-    <a link href="#who"> back </a>
+    <a href="#who"> back </a>
   </body>
   
   </html>
