--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="who">
      <h2>Who am I?</h2>
      <figure id="portrait">
-      <img src="../remgo.png" height="280" width="180" id="port">
+      <img src="../remgo.png" height="280" width="180">
      <figcaption style=" width: 180;">
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       The guys who know this fact, roll the san dice (1d100).
