--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
    <div class="main">
-    <div id="who">
+    <div class="introduce">
      <h2>Who am I?</h2>
      <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
@@ -20,7 +20,7 @@
    <div>
     <button><a link href="../roll.html">  roll </a> </button>
    </div>
-    <div id="introduce">
+    <div class="introduce">
      <h2>TRPG 하는 고영</h2>
      <ul id="vary">
       <li><p>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</p></li>
