--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <html>
  <head>
-  <h1 id="remgo">Remgo</h1>
+  
   <link rel='stylesheet' href='../styles.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
+   <header>
+    <h1 id="remgo">Remgo</h1>
+    <nav>
+     <ul>
+      <li><a href=#who>who am I</a></li>
+      <li>dice</li>
+      <li><a href=#learn>learning html</a></li>
+     </ul>
+    </nav>
+   </header>
    <div class="main">
     <div class="introduce">
-     <h2>Who am I?</h2>
+     <h2 id="who">Who am I?</h2>
      <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
      <figcaption style=" width: 180;">
@@ -27,7 +37,7 @@
     </div>
    </div>
    <div>
-    <h3>learning html</h3>
+    <h3 id="#learn">learning html</h3>
     <ul>
      <li><a link href="../cheetsheet.html"> cheet sheet </a></li>
      <li><a link href="../dog.html"> dog </a></li>
