--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
- <head>
-  
+ <head>  
   <link rel='stylesheet' href='../styles.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  </head>
-  <body>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+ </head>
+ <body>
    <header>
     <h1 id="remgo">Remgo</h1>
     <nav>
@@ -18,7 +17,7 @@
    </header>
    <div class="main">
     <div class="introduce">
-     <h2 id="who">Who am I?</h2>
+     <h2 id="#who">Who am I?</h2>
      <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
      <figcaption style=" width: 180;">
@@ -26,8 +25,8 @@
       The guys who know this fact, roll the san dice (1d100).
       </figcaption>
      </figure>
-    <button><a link href="../roll.html">  roll </a> </button>
-   </div>
+     <button><a link href="../roll.html">  roll </a> </button>
+    </div>
     <div class="introduce">
      <h2>TRPG 하는 고영</h2>
      <ul id="vary">
