--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <header>
-    <h1 id="remgo">Remgo</h1>
+    <h1>Remgo</h1>
     <nav>
      <ul>
       <li><a href=#who>who am I</a></li>
