--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
  </head>
  <body>
    <header>
-    <h1>Remgo</h1>
-    <nav>
      <ul>
+      <li>Remgo</li>
       <li><a href=#who>who am I</a></li>
       <li>dice</li>
       <li><a href=#learn>learning html</a></li>
      </ul>
-    </nav>
    </header>
    <div class="main">
     <div class="introduce">
