--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <header>
-     <ul>
+     <ul id="remgo">
       <li>Remgo</li>
       <li><a href=#who>who am I</a></li>
       <li>dice</li>
