--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  </head>
  <body>
    <header>
+    <h1>Remgo</h1>
      <ul id="remgo">
-      <li>Remgo</li>
       <li><a href=#who>who am I</a></li>
       <li>dice</li>
       <li><a href=#learn>learning html</a></li>
