--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <h2 id="#who">Who am I?</h2>
      <figure id="portrait">
       <img src="../remgo.png" height="280" width="180">
-     <figcaption style=" width: 180;">
+     <figcaption>
       I'm a big cat. I'm tall as 300m. Also I'm old cat. My age is 10 billion light years old.
       The guys who know this fact, roll the san dice (1d100).
       </figcaption>
