--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
  </head>
  <body>
    <header>
-    <h1>Remgo</h1>
+    <p>Remgo</p>
      <ul id="remgo">
       <li><a href=#who>who am I</a></li>
       <li>dice</li>
-      <li><a href=#learn>learning html</a></li>
+      <li><a href=#learn>learn html</a></li>
      </ul>
    </header>
    <div class="main">
