--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <header>
-    <p>Remgo</p>
+    <p style=" font-size: 25px; ">Remgo</p>
      <ul id="remgo">
       <li><a href=#who>who am I</a></li>
       <li>dice</li>
