--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
   
    <div>
     <h3 id="#learn">learning html</h3>
-    <a link href="../cheetsheet.html"> cheet sheet </a>
-    <a link href="../dog.html"> dog </a>
+    <ul>
+    <li><a link href="../cheetsheet.html"> cheet sheet </a></li>
+    <li><a link href="../dog.html"> dog </a></li>
+    </ul>
    </div>
   
    </body>
