--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel='stylesheet' href='../styles.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
  </head>
  
  <body>
