--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
      <li><a link href="../dog.html"> dog </a></li>
      </ul>
     </div>
-   </div>  
+   </div> 
+     <!-- CONTACT ME -->
+    <section role="region" class="photo-contact">
+      <div class="container">
+        <h2>Contact Me</h2>
+        <p>If you want contact me, you can leave messages.</p>
+        <form class="photo-contact-form">
+          <input type="name" placeholder="Full Name">
+          <input type="email" placeholder="Email Address">
+          <input type="text" placeholder="Requested Date">
+          <textarea placeholder="Something"></textarea>
+          <button type="submit" class="button button-primary">Send Request</button>
+        </form>
+      </div>
+    </section>
+  </main>
    </body>
   <footer>
   <h3>contact</h3>
