--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <h2>Contact Me</h2>
         <p>If you want contact me, you can leave messages.</p>
         <form class="photo-contact-form">
-          <input type="name" placeholder="Full Name">
-          <input type="email" placeholder="Email Address">
-          <input type="text" placeholder="Requested Date">
-          <textarea placeholder="Something"></textarea>
+          <p>Name</p><input type="name" placeholder="Full Name">
+          <p>email</p><input type="email" placeholder="Email Address">
+          <p>date</p><input type="text" placeholder="Requested Date">
+          <p>text</p><textarea placeholder="Something"></textarea>
           <button type="submit" class="button button-primary">Send Request</button>
         </form>
       </div>
