--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
   <div class="main">
     <div class="introduce">
+     <div id="intro1">
      <h2 id="#who">Who am I?</h2>
      <figure>
       <img src="../remgo.png" height="280" width="180">
@@ -25,12 +26,15 @@
      </figure>
      <button><a link href="../roll.html">  roll </a> </button>
     </div>
+   </div>
     <div class="introduce">
+     <div id="intro2">
      <h2>TRPG 하는 고영</h2>
      <ul>
      <li>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</li>
      <li>PL: Magikarogia, Agon, D&D, Gups...</li>
      </ul>
+     </div>
     </div>
     <div id="#learn">
      <h3>learning html</h3>
