--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  
  <head>  
   <link rel='stylesheet' href='../styles.css'>
+  <link rel='stylesheet' href='../linkpage.css'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round|Bree+Serif&display=swap" rel="stylesheet">
  </head>
