--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Remgo</h1>
      <ul id="remgo">
       <li><a href=#who>who am I</a></li>
-      <li>setion cards</li>
-      <li>character sheet</li>
+      <li><a link href="../session_card.html">session cards</a></li>
+      <li><a link href="../character_sheet.html">character sheet</a></li>
       <li><a href=#learn>learn html</a></li>
      </ul>
   </header>
