--- a/character_sheet.html
+++ b/character_sheet.html
@@ -10,10 +10,10 @@
   <header>
     <h1>Remgo</h1>
      <ul id="remgo">
-      <li><a href=#who>who am I</a></li>
-      <li><a link href="../session_card.html">session cards</a></li>
-      <li><a link href="../character_sheet.html">character sheet</a></li>
-      <li><a href=#learn>learn html</a></li>
+      <a link href="../index.html">who am I</a>
+      <a link href="../session_card.html">session cards</a>
+      <a link href="../character_sheet.html">character sheet</a>
+      <a link href="../index.html">learn html</a>
      </ul>
   </header>
    
