--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  </head>
  <body>
   <header>
-    <h1>Remgo</h1>
-     <ul id="remgo">
+    <ul id="remgo">
+      <a id="logo">Remgo</a>
       <a link href="../index.html">who am I</a>
       <a link href="../session_card.html">session cards</a>
       <a link href="../character_sheet.html">character sheet</a>
