--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </ul>
      </div>
     </div>
-    <div id="#learn">
+    <div id="learn">
      <h3>learning html</h3>
      <ul>
      <li><a link href="../cheetsheet.html"> cheet sheet </a></li>
