--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a id="logo">Remgo</a>
       <a link href="../index.html">who am I</a>
       <a link href="../session_card.html">session cards</a>
-      <a link href="../character_sheet.html">character sheet</a>
+      <a link href="https://github.com/remgokim/procyon_custum_sheet">character sheet</a>
       <a link href="../index.html">learn html</a>
      </ul>
   </header>
