--- a/session_card.html
+++ b/session_card.html
@@ -18,7 +18,31 @@
   </header>
    
    <h1>session card</h1>
-   
+   <figure>
+      <img src="seca1.jpeg" height="300" width="400">
+     <figcaption>
+      </figcaption>
+     </figure>
+  <figure>
+      <img src="seca2.jpeg" height="300" width="400">
+     <figcaption>
+      </figcaption>
+     </figure>
+    <figure>
+      <img src="seca3.jpeg" height="300" width="400">
+     <figcaption>
+      </figcaption>
+     </figure>
+    <figure>
+      <img src="seca4.jpeg" height="300" width="400">
+     <figcaption>
+      </figcaption>
+     </figure>
+    <figure>
+      <img src="seca5.jpeg" height="300" width="400">
+     <figcaption>
+      </figcaption>
+     </figure>
   </body>
   
   </html>
