--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <a id="logo">Remgo</a>
       <a link href="../index.html">who am I</a>
       <a link href="../session_card.html">session cards</a>
-      <a link href="https://github.com/remgokim/procyon_custum_sheet">character sheet</a>
-      <a link href="../index.html">learn html</a>
+      <a link href="https://github.com/remgokim/procyon_custum_sheet/"  target="_blank">character sheet(새 창)</a>
      </ul>
   </header>
   <div class="main">
