--- a/session_card.html
+++ b/session_card.html
@@ -12,36 +12,25 @@
       <a id="logo">Remgo</a>
       <a link href="../index.html">who am I</a>
       <a link href="../session_card.html">session cards</a>
-      <a link href="../character_sheet.html">character sheet</a>
-      <a link href="../index.html">learn html</a>
+      <a link href="../character_sheet.html">character sheet(새 창)</a>
      </ul>
   </header>
    
    <h1>session card</h1>
    <figure>
       <img src="seca1.jpeg" height="300" width="400">
-     <figcaption>
-      </figcaption>
      </figure>
   <figure>
       <img src="seca2.jpeg" height="300" width="400">
-     <figcaption>
-      </figcaption>
      </figure>
     <figure>
       <img src="seca3.jpeg" height="300" width="400">
-     <figcaption>
-      </figcaption>
      </figure>
     <figure>
       <img src="seca4.jpeg" height="300" width="400">
-     <figcaption>
-      </figcaption>
      </figure>
     <figure>
       <img src="seca5.jpeg" height="300" width="400">
-     <figcaption>
-      </figcaption>
      </figure>
   </body>
   
