--- a/session_card.html
+++ b/session_card.html
@@ -8,11 +8,11 @@
  </head>
  <body>
   <header>
-     <ul id="remgo">
+    <ul id="remgo">
       <a id="logo">Remgo</a>
       <a link href="../index.html">who am I</a>
       <a link href="../session_card.html">session cards</a>
-      <a link href="../character_sheet.html">character sheet(새 창)</a>
+      <a link href="https://github.com/remgokim/procyon_custum_sheet/"  target="_blank">character sheet(새 창)</a>
      </ul>
   </header>
    
