--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="introduce">
      <div id="intro2">
      <h2>TRPG 하는 고영</h2>
+      <a>Team.오래오래, 함선.간장게장</a>
      <ul>
      <li>GM: Call of Cthulu, Insane, Fiasco, Scum and Vilainy</li>
      <li>PL: Magikarogia, Agon, D&D, Gups...</li>
